Added database table separator property

--- a/astrogrid/datacenter/test/java/org/astrogrid/datacenter/query/test.properties
+++ b/astrogrid/datacenter/test/java/org/astrogrid/datacenter/query/test.properties
@@ -15,10 +15,10 @@
 #
 
 #
-# Following are the base name, language code and country code for 
-# the properties file that contains all messages for a datacenter 
+# Following are the base name, language code and country code for
+# the properties file that contains all messages for a datacenter
 #
-# Example. 
+# Example.
 # Given these values:
 # MESSAGES.INSTALLATION.BASENAME=ASTROGRID_datacentermessages
 # MESSAGES.INSTALLATION.LANGUAGECODE=en
@@ -32,24 +32,24 @@
 MESSAGES.INSTALLATION.BASENAME=ASTROGRID_datacentermessages
 MESSAGES.INSTALLATION.LANGUAGECODE=
 MESSAGES.INSTALLATION.COUNTRYCODE=
- 
+
 #
-# Switches validation on/off for query request documents 
+# Switches validation on/off for query request documents
 #
 PARSER.VALIDATION=false
- 
+
 #
 # Each catalog can possess its own query factory, or share a query factory.
 # This is dependent upon whether one DBMS is vastly different from another,
 # and whether the datacenter runs different DBMS's, or even different and
-# incompatible releases of the same DBMS. 
+# incompatible releases of the same DBMS.
 #
-# A DBMS can be commercial (e.g. DB/2, Oracle, SQLServer), 
+# A DBMS can be commercial (e.g. DB/2, Oracle, SQLServer),
 # open source (e.g. MySQL, PostgreSQL), or even completely home grown.
 # Each of these COULD give rise to different QueryFactory implementations.
 # It is required each implement the org.astrogrid.datacenter.job.QueryFactory interface.
 #
-# Each catalog can be held within a different datasource (database), 
+# Each catalog can be held within a different datasource (database),
 # or not, as the case may be. We require the JNDI location in order
 # to find the datasource.
 #
@@ -69,7 +69,7 @@ USNOB.DATASOURCE=java:comp/env/jdbc/usnob-datasource
 
 #
 # Factory for creating VOTables. At present only one is supported.
-# Each datacenter can write their own version, if they want to. 
+# Each datacenter can write their own version, if they want to.
 # This must implement the org.astrogrid.datacenter.votable.VOTableFactory interface.
 #
 VOTABLEFACTORY=org.astrogrid.datacenter.impl.VOTableFactoryImpl
@@ -83,7 +83,7 @@ VOTABLEFACTORY=org.astrogrid.datacenter.impl.VOTableFactoryImpl
 MYSPACE.FACTORY_KEY=org.astrogrid.datacenter.impl.MySpaceFactoryImpl
 
 #
-# Local directory where temporary files associated with the MySpace facility 
+# Local directory where temporary files associated with the MySpace facility
 # can be created (e.g. for the purposes of holding a votable to be ftp'd to MySpace).
 # The format is operating system dependent and can be a relative- or a fully-
 # qualified path.
@@ -128,6 +128,11 @@ JOB.MONITOR.REQUEST_TEMPLATE= \
    <jobstep name="{5}" stepNumber="{6}" status="{7}"/> \
 </job>
 
+
+#
+# Database table separator
+#
+DATABASE.TABLE.SEPARATOR=..
 
 #
 # Datacenter specific UCD to Column Headings mappings go here. The format is:
