--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
-    | <cvs:author>$Author: pah $</cvs:author>
-    | <cvs:date>$Date: 2003/09/16 22:23:24 $</cvs:date>
-    | <cvs:version>$Revision: 1.34 $</cvs:version>
+    | <cvs:author>$Author: KevinBenson $</cvs:author>
+    | <cvs:date>$Date: 2003/09/17 09:27:28 $</cvs:date>
+    | <cvs:version>$Revision: 1.35 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.35  2003/09/17 09:27:28  KevinBenson
+    |   aded myspace delegate stuff
+    |
     |   Revision 1.34  2003/09/16 22:23:24  pah
     |   authentication unit tests working under eclipse server and client
     |
@@ -1630,6 +1633,8 @@
 				<path refid="axis.classpath"/>
 				<!-- Include the JConfig libraries -->
 				<path refid="jconfig.classpath"/>
+				<!-- include the myspace libraries of the delegate -->
+				<path refid="myspace.classpath"/>					
 			</classpath>
 		</javac>
 	</target>
@@ -1730,6 +1735,10 @@
 		<antcall target="policy.client.jar"/>
 	</target>
 
+	<path id="myspace.classpath">
+		<pathelement location="${basedir}/depends/myspace/myspace-client.jar"/>
+	</path>
+
 	<!--+
 		| Install our service jars.
 		+-->
@@ -1751,6 +1760,9 @@
 			<fileset dir="${jconfig.home}/dist">
 				<include name="jconfig.jar"/>
 			</fileset>
+			<fileset dir="${basedir}/depends/myspace">
+				<include name="myspace-client.jar"/>
+			</fileset>			
 		</copy>
 		<!-- Copy our jar into the Axis WEB-INF/lib directory -->
 		<copy verbose="true" todir="${axis.webapp}/WEB-INF/lib">
