--- a/astrogrid/community/build.xml
+++ b/astrogrid/community/build.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0"?>
 <!--+
     | <cvs:source>$Source: /Users/pharriso/Work/ag/repo/git/astrogrid-mirror/astrogrid/community/Attic/build.xml,v $</cvs:source>
-    | <cvs:author>$Author: KevinBenson $</cvs:author>
-    | <cvs:date>$Date: 2003/09/17 09:27:28 $</cvs:date>
-    | <cvs:version>$Revision: 1.35 $</cvs:version>
+    | <cvs:author>$Author: pah $</cvs:author>
+    | <cvs:date>$Date: 2003/09/17 14:07:08 $</cvs:date>
+    | <cvs:version>$Revision: 1.36 $</cvs:version>
     | <cvs:log>
     |   $Log: build.xml,v $
+    |   Revision 1.36  2003/09/17 14:07:08  pah
+    |   updated where the jars are built to
+    |
     |   Revision 1.35  2003/09/17 09:27:28  KevinBenson
     |   aded myspace delegate stuff
     |
@@ -2927,7 +2930,7 @@ Start of Authentication "auth" tasks
 		<!-- The Axis libraries -->
 		<path refid="axis.classpath"/>
 		<!-- Our client classes -->
-		<pathelement path="${installkitdir}/${authentication.client.jar}"/>
+		<pathelement path="${authentication.base}/install/${authentication.client.jar}"/>
 	</path>
 	
 	
@@ -3109,8 +3112,8 @@ database.url=jdbc:hsqldb:hsql:${hsqldb.data}
 		+-->
 	<target name="authentication.server.jar" depends="authentication.javac">
 		<!-- Create our jar file -->
-		<mkdir dir="${installkitdir}"/>
-		<jar destfile="${installkitdir}/${authentication.server.jar}">
+		<mkdir dir="${authentication.base}/install"/>
+		<jar destfile="${authentication.base}/install/${authentication.server.jar}">
 			<!-- Copy our own Java source -->
 			<fileset dir="${authentication.classes}">
 				<include name="org/astrogrid/community/authentication/**"/>
@@ -3128,10 +3131,10 @@ database.url=jdbc:hsqldb:hsql:${hsqldb.data}
 	<target name="authentication.client.jar" depends="">
 		<!-- Create our build directory -->
 
-		<mkdir dir="${installkitdir}"/>
+		<mkdir dir="${authentication.base}/install"/>
 		
 		<!-- Create our jar file -->
-		<jar destfile="${installkitdir}/${authentication.client.jar}">
+		<jar destfile="${authentication.base}/install/${authentication.client.jar}">
 			<!-- Copy our own Java source -->
 			<fileset dir="${authentication.classes}">
 				<include name="org/astrogrid/community/authentication/data/**"/>
@@ -3206,7 +3209,7 @@ database.url=jdbc:hsqldb:hsql:${hsqldb.data}
 		</copy>
 		<!-- Copy our jar into the Axis WEB-INF/lib directory -->
 		<copy verbose="true" todir="${axis.webapp}/WEB-INF/lib">
-			<fileset dir="${installkitdir}">
+			<fileset dir="${authentication.base}/install">
 				<include name="${authentication.server.jar}"/>
 			</fileset>
 		</copy>
@@ -3350,7 +3353,7 @@ database.url=jdbc:hsqldb:hsql:${hsqldb.data}
 			<formatter type="xml"/>
 			<!-- Run the target JUnitTestCase tests -->
 			<batchtest todir="${authentication.base}/junit" haltonfailure="no">
-				<fileset dir="${authentication.base}/testclasses/org/astrogrid/community/delegate/authentication">
+				<fileset dir="${authentication.base}/testclasses/">
 								
 				</fileset>
 			</batchtest>
